force-app/main/default/objects/Intapp_Internal_Request__c/Intapp_Internal_Request__c.object-meta.xml
<CustomObject>
    <description>Represents an internal request for a change to a system or process.</description>
    <label>Intapp Internal Request</label>
    <nameField>
        <displayFormat>IIR-{000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intapp Internal Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>