force-app/main/default/objects/Intapp_Internal_Request__c/fields/Actual_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Close_Date__c</fullName>
    <description>The actual date to resolution</description>
    <label>Actual Close Date</label>
    <type>Date</type>
</CustomField>