force-app/main/default/objects/Intapp_Internal_Request__c/fields/Smartsheet_Link__c.field-meta.xml
<CustomField>
    <fullName>Smartsheet_Link__c</fullName>
    <description>Link to smartsheet</description>
    <label>Smartsheet Link</label>
    <type>Url</type>
</CustomField>