force-app/main/default/objects/Intapp_Internal_Request__c/fields/Target_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Close_Date__c</fullName>
    <description>The targeted date to resolution</description>
    <label>Target Close Date</label>
    <type>Date</type>
</CustomField>