force-app/main/default/objects/Intapp_Internal_Request__c/recordTypes/Initiative.recordType-meta.xml
<RecordType>
    <fullName>Initiative</fullName>
    <active>true</active>
    <description>Represents a more complex initiative, often with multiple subtasks</description>
    <label>Initiative</label>
</RecordType>