force-app/main/default/objects/Intapp_Internal_Request__c/recordTypes/Ticket.recordType-meta.xml
<RecordType>
    <fullName>Ticket</fullName>
    <active>true</active>
    <description>Represents a simple request, such as troubleshooting, new validation rule, etc. Similar to a Case record</description>
    <label>Ticket</label>
</RecordType>