force-app/main/default/objects/Intapp_Internal_Request__c/listViews/Alan_s_Completed_Requests.listView-meta.xml
<ListView>
    <fullName>Alan_s_Completed_Requests</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Created_Date__c</columns>
    <columns>Actual_Close_Date__c</columns>
    <columns>Requester__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>contains</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>Request_Owner__c</field>
        <operation>equals</operation>
        <value>Alan Westley</value>
    </filters>
    <label>Alan&apos;s Completed Requests</label>
</ListView>