force-app/main/default/objects/Intapp_Internal_Request__c/listViews/Completed_Requests.listView-meta.xml
<ListView>
    <fullName>Completed_Requests</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Actual_Close_Date__c</columns>
    <columns>Request_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>contains</operation>
        <value>Closed</value>
    </filters>
    <label>Completed Requests</label>
</ListView>