force-app/main/default/objects/Intapp_Internal_Request__c/listViews/Megan_s_Completed_Request.listView-meta.xml
<ListView>
    <fullName>Megan_s_Completed_Request</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Created_Date__c</columns>
    <columns>Actual_Close_Date__c</columns>
    <columns>Requester__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Owner__c</field>
        <operation>equals</operation>
        <value>Megan Buonaiuto</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>contains</operation>
        <value>Closed</value>
    </filters>
    <label>Megan&apos;s Completed Requests</label>
    <language>en_US</language>
</ListView>