force-app/main/default/objects/Intapp_Internal_Request__c/listViews/Open_Initiatives.listView-meta.xml
<ListView>
    <fullName>Open_Initiatives</fullName>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notContain</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Intapp_Internal_Request__c.Initiative</value>
    </filters>
    <label>Open Initiatives</label>
</ListView>